--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -119,7 +119,7 @@ footer ul{
 // No media query since this is the default in Bootstrap*/
 @media (max-width: 575.98px) {
 	.slogan {
-		max-width: 210px;
+		max-width: 190px;
 		text-align: center;
 		margin-top: -15px;
 		position: relative;
@@ -189,8 +189,8 @@ footer ul{
 	}
 
 	footer {
-		padding-bottom: 0;
-		height: 600px;
+		padding-bottom: 0px;
+		
 
 	
  }
