--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -119,7 +119,7 @@ footer ul{
 // No media query since this is the default in Bootstrap*/
 @media (max-width: 575.98px) {
 	.slogan {
-		max-width: 180px;
+		max-width: 190px;
 		text-align: center;
 		margin-top: -20px;
 		position: relative;
@@ -143,7 +143,8 @@ footer ul{
 	    font-weight: bold;
 	    background: #b3298d;
 	    font-family: "Garamond", serif;
-	    font-size: 0.8em
+	    font-size: 0.8em;
+	    padding: 3px; 
 	    
 
 }
